fix(ui): prevent action text overflow on mobile

--- a/app/client/src/style/components/_toast.scss
+++ b/app/client/src/style/components/_toast.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	gap: 5px;
 	opacity: 1;
-	min-width: 250px;
+	min-width: 340px;
 	max-width: calc(100vw - 32px);
 	color: #fff;
 	text-align: center;
@@ -13,7 +13,7 @@
 	pointer-events: none;
 	z-index: 9999;
 	left: 50%;
-	bottom: 30px;
+	bottom: 20px;
 	transform: translateX(-50%);
 	box-sizing: border-box;
 }
@@ -40,8 +40,7 @@
 	align-items: center;
 	justify-content: center;
 	gap: 10px;
-	padding: 16px 1em;
-	max-width: calc(100vw - 32px);
+	padding: 8px 1em;
 	box-sizing: border-box;
 	.v-toast__icon {
 		background: url('../../assets/icons/small_edit.webp') no-repeat;
